# Push_Doc

./: Cargo.toml  LICENSE-MIT  README.md
auth/: api_key  client_secret_1014602435348-6317hvuq1n0stf3p9hqlqnplls8cb336.apps.googleusercontent.com.json  client_secret_1014602435348-jm9bsfir9g662f3qahjlj8il1an3g3gd.apps.googleusercontent.com.json  code  token
certs/: client.crt  client.csr  client.key  root.crt  root.key
examples/: delete_test.script  multi_job_example.script  push_doc.script
src/: REST_resource  auth.rs  docs_types.rs  docs_update.rs  googledocs.rs  main.rs  networking.rs  redone_networking.rs  script.rs  validate.rs
